basic form for task 1

--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -1,4 +1,8 @@
 .message {
-  color: blueviolet;
+  color: rgb(226, 220, 43);
   background-color: rgb(48, 39, 27);
+}
+
+.colors {
+  color: rgb(181, 50, 187);
 }
